Update API_KEY in scweb.html

--- a/scweb.html
+++ b/scweb.html
@@ -88,7 +88,7 @@
         const chatArea = document.getElementById('chat-area');
 
         // --- Gemini API Configuration ---
-        const API_KEY = ""; // API Key will be injected by the environment. Do not change.
+        const API_KEY = "AIzaSyCjb6mNtYOO9lh0woCysjeU2kyh46s3VHs"; // API Key will be injected by the environment. Do not change.
         const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${API_KEY}`;
         const MAX_RETRIES = 5;
 
